--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <section id="work">
         <div class="full-width">
           <div class="third-width">
-            <img src="./img/html-icon.png" alt="html icon" />
+            <img src="html-icon.png" alt="html icon" />
             <h3>Hand-Coded HTML</h3>
             <p>
               My focus is writing clean, well formatted, semantic HTML5 by hand
@@ -85,7 +85,7 @@
             </p>
           </div>
           <div class="third-width">
-            <img src="./img/css-icon.png" alt="CSS icon" />
+            <img src="css-icon.png" alt="CSS icon" />
             <h3>Well-Organized CSS</h3>
             <p>
               I pride myself on writing CSS that is easy to read and build on. I
@@ -94,7 +94,7 @@
             </p>
           </div>
           <div class="third-width">
-            <img src="img/pencil-icon.png" alt="pencil icon" />
+            <img src="pencil-icon.png" alt="pencil icon" />
             <h3>Ease Converting Designs into Code</h3>
             <p>
               You can trust me to take a designer's PSD and quickly & accurately
@@ -110,7 +110,7 @@
         <div class="full-width">
           <div class="half-width">
             <img
-              src="./img/contact-image.png"
+              src="contact-image.png"
               id="contact-img"
               alt="contact me
             image"
@@ -121,7 +121,7 @@
             <h3 id="email-header">Let's meet for a cup of coffee.</h3>
             <a href="mailto:hi@jubileeausten.com"
               ><img
-                src="./img/envelope.png"
+                src="envelope.png"
                 id="envelope"
                 alt="envelope icon"
               />hi[@]jubileeausten.com</a
@@ -130,27 +130,27 @@
             <ul>
               <li>
                 <a href="https://www.twitter.com"
-                  ><img src="./img/twitter.png" alt="twitter icon"
+                  ><img src="twitter.png" alt="twitter icon"
                 /></a>
               </li>
               <li>
                 <a href="https://www.tumbler.com"
-                  ><img src="./img/tumblr.png" alt="tumbler icon"
+                  ><img src="tumblr.png" alt="tumbler icon"
                 /></a>
               </li>
               <li>
                 <a href="https://www.instagram.com"
-                  ><img src="./img/instagram.png" alt="instagram icon"
+                  ><img src="instagram.png" alt="instagram icon"
                 /></a>
               </li>
               <li>
                 <a href="https://www.linkedin.com"
-                  ><img src="img/linkedin.png" alt="linkedin icon"
+                  ><img src="linkedin.png" alt="linkedin icon"
                 /></a>
               </li>
               <li>
                 <a href="https://www.github.com">
-                  <img src="./img/github.png" alt="github icon"
+                  <img src="github.png" alt="github icon"
                 /></a>
               </li>
             </ul>
